--- a/css/index.css
+++ b/css/index.css
@@ -101,7 +101,7 @@ div .sidebar button {
     border: none;
 }
 .red-btn:hover {
-    background: #1963a2;
+    background: #009688;
   
 }
 /*my info card */
@@ -327,8 +327,8 @@ div h4.posts-title a {
     font-weight: 300;
 }
 div h4.posts-title a:hover {
-    color: #1963a2;
-    text-shadow: 0px 0px 10px #1963a2;
+    color: #009688;
+    /*text-shadow: 0px 0px 10px #1963a2;*/
 }
 
 div.posts p.descript {
